Added comment to Unit test flows explaining what PHP version is used. Specified PHP version on .wp-env.json

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -53,7 +53,7 @@ jobs:
             - name: Set up PHP
               uses: shivammathur/setup-php@v2
               with:
-                  php-version: 7.4
+                  php-version: "8.0" # This is not the PHP version used to run the tests, that is set by wp-env
                   coverage: none
                   tools: composer
 
