--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	},
 	"require-dev": {
 		"wp-phpunit/wp-phpunit": "^6.0",
-		"woocommerce/woocommerce-sniffs": "0.1.0",
+		"woocommerce/woocommerce-sniffs": "^0.1",
 		"yoast/phpunit-polyfills": "^1.0",
 		"johnbillion/wp-hooks-generator": "^0.9.0",
 		"mockery/mockery": "^1.4"
