Add CI for monitoring TypeScript errors (#6106)
* Add a action that monitors TypeScript errors #6068

Add a action that monitors TypeScript errors

* address feedback

* bot: update checkstyle.xml

* add @bartekbp/typescript-checkstyle as devDeps

* bot: update checkstyle.xml

* bot: update checkstyle.xml

* bot: update checkstyle.xml

* fix

* add checkstyle to .distignore

* add missing import

* address feedback

* fix error

* remove import

* fix name variable

* fix sort function

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Albert Juhé Lluveras <contact@albertjuhe.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,10 @@
 		"./assets/js/blocks/mini-cart/mini-cart-contents/inner-blocks/**/block.json",
 		"./storybook/**/*"
 	],
-	"exclude": [ "./assets/js/data" ],
-	"references": [
-		{ "path": "./assets/js/data" },
-		{ "path": "./assets/js/icons" },
-		{ "path": "./assets/js/base/components" },
-		{ "path": "./assets/js/base/context/hooks" },
-		{ "path": "./packages" },
-		{ "path": "./assets/js/extensions/google-analytics" },
-		{ "path": "./assets/js/base/context" }
+	"exclude": [
+		"./storybook/build",
+		"./storybook/webpack.config.js",
+		"./storybook/preview.js",
+		"./bin"
 	]
 }
