--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"test:update": "wp-scripts test-unit-js --updateSnapshot --config tests/js/jest.config.json",
 		"test:watch": "npm run test -- --watch",
 		"ts:check": "tsc --build",
+		"ts:log-errors": "npm --silent run ts:check | npx -y @bartekbp/typescript-checkstyle > checkstyle.xml",
 		"wp-env": "wp-env",
 		"wp-env:config": "./bin/wp-env-pre-config.sh"
 	},
@@ -95,6 +96,7 @@
 		"@babel/plugin-syntax-jsx": "7.18.6",
 		"@babel/polyfill": "7.12.1",
 		"@babel/preset-typescript": "7.18.6",
+		"@bartekbp/typescript-checkstyle": "5.0.0",
 		"@octokit/graphql": "4.8.0",
 		"@storybook/addon-a11y": "6.5.9",
 		"@storybook/addon-essentials": "6.5.9",
@@ -175,6 +177,7 @@
 		"eslint-plugin-woocommerce": "file:bin/eslint-plugin-woocommerce",
 		"eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
 		"expect-puppeteer": "6.1.1",
+		"fast-xml-parser": "4.0.7",
 		"follow-redirects": "1.15.1",
 		"fs-extra": "10.1.0",
 		"gh-pages": "4.0.0",
