--- a/.github/workflows/typescript-monitoring.yml
+++ b/.github/workflows/typescript-monitoring.yml
@@ -1,5 +1,8 @@
 name: Monitor TypeScript errors
-on: pull_request
+on:
+    push:
+        branches: [trunk]
+    pull_request:
 
 jobs:
     check-typescript-errors-with-trunk:
@@ -32,6 +35,11 @@ jobs:
                   npm ci
                   npm run ts:log-errors
 
+            - name: Extract branch name
+              shell: bash
+              run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+              id: extract_branch
+
             - name: Monitor TypeScript errors
               uses: ./.github/monitor-typescript-errors
               with:
@@ -39,7 +47,7 @@ jobs:
                   compare: checkstyle.xml
               env:
                   AIRTABLE_API_KEY: ${{ secrets.AIRTABLE_API_KEY }}
-                  CURRENT_BRANCH: ${{ steps.branch-name.outputs.current_branch }}
+                  CURRENT_BRANCH: ${{ steps.extract_branch.outputs.branch }}
 
             - name: Check if the checklist.xml file is changed
               id: verify_diff
