--- a/.github/workflows/typescript-monitoring.yml
+++ b/.github/workflows/typescript-monitoring.yml
@@ -37,7 +37,7 @@ jobs:
 
             - name: Extract branch name
               shell: bash
-              run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+              run: echo ${GITHUB_REF##*/}
               id: extract_branch
 
             - name: Monitor TypeScript errors
