--- a/.github/workflows/typescript-monitoring.yml
+++ b/.github/workflows/typescript-monitoring.yml
@@ -35,6 +35,10 @@ jobs:
                   npm ci
                   npm run ts:log-errors
 
+            - name: Get branch name
+              id: branch-name
+              uses: tj-actions/branch-names@v6
+
             - name: Monitor TypeScript errors
               uses: ./.github/monitor-typescript-errors
               with:
