--- a/.github/workflows/php-js-e2e-tests.yml
+++ b/.github/workflows/php-js-e2e-tests.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
     JSE2EWithGutenberg:
+        if: ${{ false }}  # disable for now
         strategy:
             fail-fast: false
             matrix:
