--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
 		"@wordpress/e2e-test-utils": "8.3.0",
 		"@wordpress/e2e-tests": "4.6.0",
 		"@wordpress/element": "4.0.4",
-		"@wordpress/env": "4.9.0",
+		"@wordpress/env": "^5.6.0",
 		"@wordpress/html-entities": "3.12.0",
 		"@wordpress/i18n": "4.14.0",
 		"@wordpress/is-shallow-equal": "4.13.0",
