--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -113,7 +113,9 @@ jobs:
               run: composer install
 
             - name: Setup Environment
-              run: chmod -R 767 ./ #TODO: Might get implemented in wp-env
+              run: |
+                chmod -R 767 ./
+                chown -R www-data: ./
 
             - name: Run PHPUnit tests
               run: |
