--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -112,13 +112,11 @@ jobs:
             - name: Install PHP deps
               run: composer install
 
-            - name: Setup Environment
+            - name: Setup Permissions
               run: |
-                whoami
-                ls -lah
+                mkdir ./wp-content/uploads/wc-logs
+                echo 'deny from all' > ./wp-content/uploads/wc-logs/.htaccess
                 chmod -R 777 ./
-                ls -lah
-                chown -R www-data: ./
 
             - name: Run PHPUnit tests
               run: |
