Attempt at destroying wp-env before run.

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -130,6 +130,7 @@ jobs:
               run: |
                   JSON='{"plugins": [".","https://downloads.wordpress.org/plugin/woocommerce.zip"], "phpVersion": "${{ matrix.php }}"}'
                   echo $JSON > .wp-env.override.json
+                  npm run wp-env destroy                
                   npm run wp-env start --update
                   npm run test:php
 
