--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -122,7 +122,6 @@ jobs:
               run: |
                 JSON='{"phpVersion": "${{ matrix.php }}"}'
                 echo $JSON > .wp-env.override.json
-                npm run wp-env destroy
                 npm run wp-env start --update
                 npm run test:php
 
@@ -130,7 +129,7 @@ jobs:
               run: |
                   JSON='{"plugins": [".","https://downloads.wordpress.org/plugin/woocommerce.zip"], "phpVersion": "${{ matrix.php }}"}'
                   echo $JSON > .wp-env.override.json
-                  npm run wp-env destroy                
+                  npm run wp-env stop
                   npm run wp-env start --update
                   npm run test:php
 
