--- a/.github/workflows/php-js-e2e-tests.yml
+++ b/.github/workflows/php-js-e2e-tests.yml
@@ -153,7 +153,9 @@ jobs:
             - name: Setup Permissions
               run: |
                 mkdir -p ./wp-content/languages
-                chmod -R 777 ./    
+                chmod -R 777 ./
+                whoami
+                ls -lah
             
             - name: E2E Tests (WP latest)
               env:
