--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
 		"wp-phpunit/wp-phpunit": "^6.0",
 		"woocommerce/woocommerce-sniffs": "0.1.0",
 		"yoast/phpunit-polyfills": "^1.0",
-		"johnbillion/wp-hooks-generator": "^0.9.0",
-		"mockery/mockery": "^1.5"
+		"mockery/mockery": "^1.4",
+		"wp-hooks/generator": "^0.9.0"
 	},
 	"autoload": {
 		"psr-4": {
