Add PHP8 Unit Testing (#7528)
* fixed method sig

* Updated to @wordpress/env@5.5.0 and set default PHP 7.4 for wp-env.

* updated Coding Standards flow to use PHP 8.0

* Added comment to E2E flows explaining what PHP version is used

* Revert "Updated to @wordpress/env@5.5.0 and set default PHP 7.4 for wp-env."

This reverts commit 696cd7f42edc9d9726b777cf4f83a501a6d63936.

* Added comment to Unit test flows explaining what PHP version is used.
Specified PHP version on .wp-env.json

* Fixed composer-lock.json version.

* Updated tests to run on PHP Unit 9.2.6

* Updated tests to run on PHP 8

* Reverted test, mismatched results between local and pipeline

* Removed Todo

* Updated platform overrides

* Update Migrationb tests with Mockery for PHP8 compat

* try at PHP unit flow matrix

* Fix blocks.ini invalid config

* Temp disable E2E

* Downgraded woocommerce/woocommerce-sniffs as it introduced new sniffs we should be handling on a different PR

* re-enable E2E tests

* blocks.ini fix

* revert blocks.ini fix

* Update @wordpress/env

* remove .htaccess mapping

* Fix permissions for tests

* Debug permissions

* Attempt at perm fix

* Attempt at perm fix

* Downgraded @wordpress/env

* Another attempt at upgrade @wordpress/env

* Attempt at cleaning wp-env before run

* Attempt at destroying wp-env before run. Disabled E2E.

* Attempt at destroying wp-env before run.

* debug wp-env data

* attempt at deleting wp-env data (destroy won't work due to prompt)

* re-enable E2E

* Fix deprecation warnings

* Cleaned wp-env data for E2E

* Fix perms for E2E

* Updated RateLimitsTests

* debug

* Force 7.4 for wp-env

* Run sh outside of npm

* Reverted E2E flow

* reverted wp-env-config.sh debug test

* reverted .wp-env.json phpVersion force

* Update tests/php/StoreApi/Utilities/ProductQueryFilters.php

Co-authored-by: Mike Jolley <mike.jolley@me.com>

* Update tests/php/S

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -42,7 +42,7 @@ jobs:
 
             - name: Get Composer Cache Directory
               id: composer-cache
-              run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+              run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
             - uses: actions/cache@v2
               with:
                   path: ${{ steps.composer-cache.outputs.dir }}
@@ -53,7 +53,7 @@ jobs:
             - name: Set up PHP
               uses: shivammathur/setup-php@v2
               with:
-                  php-version: 7.4
+                  php-version: "8.0" # This is not the PHP version used to run the tests, that is set by wp-env
                   coverage: none
                   tools: composer
 
@@ -61,9 +61,13 @@ jobs:
               run: composer install
 
     PHPUnitTests:
-        name: PHP Unit Tests
+        name: PHP ${{ matrix.php }}
         needs: Setup
         runs-on: ubuntu-latest
+        strategy:
+          fail-fast: false
+          matrix:
+            php: [ '7.4', '8.0' ]
 
         steps:
             - uses: actions/checkout@v3
@@ -89,11 +93,11 @@ jobs:
                   name: build-assets
 
             - name: blocks.ini setup
-              run: echo 'woocommerce_blocks_phase = 3' > blocks.ini
+              run: echo -e 'woocommerce_blocks_phase = 3\nwoocommerce_blocks_env = test' > blocks.ini
 
             - name: Get Composer cache directory
               id: composer-cache
-              run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+              run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
             - name: Set up Composer caching
               uses: actions/cache@v2
@@ -108,19 +112,26 @@ jobs:
             - name: Install PHP deps
               run: composer install
 
-            - name: Setup Environment
+            - name: Setup Permissions
               run: |
-                  chmod -R 767 ./ #TODO: Might get implemented in wp-env
-                  npm run wp-env start
+                mkdir -p ./wp-content/uploads/wc-logs
+                echo 'deny from all' > ./wp-content/uploads/wc-logs/.htaccess
+                chmod -R 777 ./
 
             - name: Run PHPUnit tests
-              run: npm run test:php
+              run: |
+                JSON='{"phpVersion": "${{ matrix.php }}"}'
+                echo $JSON > .wp-env.override.json
+                npm run wp-env start --update
+                npm run test:php
 
             - name: Run PHPUnit tests (WooCommerce Development Version)
               run: |
-                  JSON='{"plugins": [".","https://downloads.wordpress.org/plugin/woocommerce.zip"]}'
+                  JSON='{"plugins": [".","https://downloads.wordpress.org/plugin/woocommerce.zip"], "phpVersion": "${{ matrix.php }}"}'
                   echo $JSON > .wp-env.override.json
-                  npm run wp-env start
+                  npm run wp-env stop
+                  rm -rf /home/runner/wp-env/*
+                  npm run wp-env start --update
                   npm run test:php
 
     JSUnitTests:
@@ -151,7 +162,7 @@ jobs:
                   name: build-assets
 
             - name: blocks.ini setup
-              run: echo -e 'woocommerce_blocks_phase = 3\nwoocommerce_blocks_env = tests' > blocks.ini
+              run: echo -e 'woocommerce_blocks_phase = 3\nwoocommerce_blocks_env = test' > blocks.ini
 
             - name: Run JavaScript Unit tests
               run: npm run test
