--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
 		"test:e2e:update": "npm run wp-env:config && cross-env JEST_PUPPETEER_CONFIG=tests/e2e/config/jest-puppeteer.config.js NODE_CONFIG_DIR=tests/e2e/config wp-scripts test-e2e --config tests/e2e/config/jest.config.js --updateSnapshot",
 		"test:help": "wp-scripts test-unit-js --help",
 		"test:performance": "npm run wp-env:config && cross-env NODE_CONFIG_DIR=tests/e2e/config wp-scripts test-e2e --config tests/e2e/config/jest.performance.config.js -- performance",
-		"test:php": "npm run wp-env run phpunit 'phpunit -c /var/www/html/wp-content/plugins/$(basename $(pwd))/phpunit.xml.dist'",
+		"test:php": "npm run wp-env run phpunit '/var/www/html/wp-content/plugins/$(basename $(pwd))/vendor/bin/phpunit -c /var/www/html/wp-content/plugins/$(basename $(pwd))/phpunit.xml.dist'",
 		"test:update": "wp-scripts test-unit-js --updateSnapshot --config tests/js/jest.config.json",
 		"test:watch": "npm run test -- --watch",
 		"ts:check": "tsc --build",
@@ -148,7 +148,7 @@
 		"@wordpress/e2e-test-utils": "8.3.0",
 		"@wordpress/e2e-tests": "4.6.0",
 		"@wordpress/element": "4.0.4",
-		"@wordpress/env": "4.9.0",
+		"@wordpress/env": "^4.9.0",
 		"@wordpress/html-entities": "3.12.0",
 		"@wordpress/i18n": "4.14.0",
 		"@wordpress/is-shallow-equal": "4.13.0",
