Correct merge mistakes

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,15 +1,9 @@
-name: Unit Tests
+name: Unit tests
 
 on:
-  pull_request:
-  push:
-    branches: [ trunk ]
-
-# Cancels all previous workflow runs for the same branch that have not yet completed.
-concurrency:
-  # The concurrency group contains the workflow name and the branch name.
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    push:
+        branches: [trunk]
+    pull_request:
 
 jobs:
     Setup:
